--- a/static/css/bkmi.css
+++ b/static/css/bkmi.css
@@ -1,4 +1,22 @@
 
+#fh5co-home .gradient {
+    display: none;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    opacity: .1;
+    -webkit-backface-visibility: hidden;
+    background-color: #2b2b2b91;
+    background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zd…AiIHk9IjAiIHdpZHRoPSIxIiBoZWlnaHQ9IjEiIGZpbGw9InVybCgjdnNnZykiIC8+PC9zdmc+);
+    background-image: -webkit-gradient(linear, 0% 0%, 100% 100%, color-stop(0, #7b3f75), color-stop(1, #c24d67));
+    background-image: -webkit-repeating-linear-gradient(top left, #7b3f75 0%, #c24d67 100%);
+    background-image: repeating-linear-gradient(to bottom right, #7b3f75 0%, #c24d67 100%);
+    background-image: -ms-repeating-linear-gradient(top left, #7b3f75 0%, #c24d67 100%);
+}
+
 #fh5co-home .text-inner h1 {
     font-size: 50px;
     color: white;
@@ -27,6 +45,11 @@
 #fh5co-intro .intro-items>div {
     display: flex;
     align-items: flex-end;
+}
+
+.intro-items>div {
+    border: solid #eee 2px;
+    margin: 3px;
 }
 
 #fh5co-intro .container .row.intro-items {
@@ -109,22 +132,7 @@
 }
 
 
-#fh5co-home .gradient {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
-    opacity: .1;
-    -webkit-backface-visibility: hidden;
-    background-color: #2b2b2b91;
-    background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zd…AiIHk9IjAiIHdpZHRoPSIxIiBoZWlnaHQ9IjEiIGZpbGw9InVybCgjdnNnZykiIC8+PC9zdmc+);
-    background-image: -webkit-gradient(linear, 0% 0%, 100% 100%, color-stop(0, #7b3f75), color-stop(1, #c24d67));
-    background-image: -webkit-repeating-linear-gradient(top left, #7b3f75 0%, #c24d67 100%);
-    background-image: repeating-linear-gradient(to bottom right, #7b3f75 0%, #c24d67 100%);
-    background-image: -ms-repeating-linear-gradient(top left, #7b3f75 0%, #c24d67 100%);
-}
+
 
 #fh5co-home {
     background-color: transparent;
@@ -155,24 +163,24 @@
 
 
 
-#fh5co-services .gradient {
-     background-color: #c24d67; 
-     background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zd…AiIHk9IjAiIHdpZHRoPSIxIiBoZWlnaHQ9IjEiIGZpbGw9InVybCgjdnNnZykiIC8+PC9zdmc+); 
-     background-image: -webkit-gradient(linear, 0% 0%, 100% 100%, color-stop(0, #7b3f75), color-stop(1, #c24d67)); 
-     background-image: -webkit-repeating-linear-gradient(top left, #7b3f75 0%, #c24d67 100%); 
-     background-image: repeating-linear-gradient(to bottom right, #151454 0%, #ea4f50 100%); 
-    background-image: -ms-repeating-linear-gradient(top left, #7b3f75 0%, #c24d67 100%);
-    overflow: hidden;
-    position: relative;
-    color: rgba(255, 255, 255, 0.7);
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 0;
-    opacity: 1.0;
-}
+/*#fh5co-services .gradient {*/
+/*     background-color: #c24d67; */
+/*     background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zd…AiIHk9IjAiIHdpZHRoPSIxIiBoZWlnaHQ9IjEiIGZpbGw9InVybCgjdnNnZykiIC8+PC9zdmc+); */
+/*     background-image: -webkit-gradient(linear, 0% 0%, 100% 100%, color-stop(0, #7b3f75), color-stop(1, #c24d67)); */
+/*     background-image: -webkit-repeating-linear-gradient(top left, #7b3f75 0%, #c24d67 100%); */
+/*     background-image: repeating-linear-gradient(to bottom right, #151454 0%, #ea4f50 100%); */
+/*    background-image: -ms-repeating-linear-gradient(top left, #7b3f75 0%, #c24d67 100%);*/
+/*    overflow: hidden;*/
+/*    position: relative;*/
+/*    color: rgba(255, 255, 255, 0.7);*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    bottom: 0;*/
+/*    left: 0;*/
+/*    right: 0;*/
+/*    z-index: 0;*/
+/*    opacity: 1.0;*/
+/*}*/
 
 
 .col-md-8 {
