added references content and layout

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
 		{{ partial "hero.html" .}}
 		
 		
-        {{ partial "intro.html" .}}
+        {{ partial "introsection.html" .}}
 
 
 		{{ if .Site.Params.testimonials.enable }}
