add some references

--- a/layouts/partials/introsection.html
+++ b/layouts/partials/introsection.html
@@ -9,25 +9,67 @@
 			</div>
 		</div>
 		<div class="row row-bottom-padded-lg intro-items">
-		
 			<div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/ruvido.md" }}
+				{{ with .Site.GetPage "page" "references/professionell-werben.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
-            </div>
+			</div>
             <div class="col to-animate ">
                  {{ with .Site.GetPage "page" "references/building-award.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
             <div class="col to-animate ">
-                 {{ with .Site.GetPage "page" "references/building-award2.md" }}
+				{{ with .Site.GetPage "page" "references/workware-contria.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+			</div>
+		</div>
+		 					 
+		<div class="row row-bottom-padded-lg intro-items">
+			<div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/ruvido.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-		
-		
+			<div class="col to-animate ">
+				{{ with .Site.GetPage "page" "references/grafikdesign.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+			</div>
 		</div>
+		
+		<div class="row row-bottom-padded-lg intro-items">
+			<div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/workware.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+            <div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/building-award2.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+		</div>
+		
+		<div class="row row-bottom-padded-lg intro-items">
+			<div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/workware.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+            <div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/building-award2.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+            <div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/building-award2.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+		</div>
+		
 	
 		
 	
