--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,18 +1,20 @@
 
 
 			    	
-						<a class="popup-modal " href="#{{ .Params.content_url }}" style="background-image:url('{{ .Params.img }}');">
-							<span>{{ .Params.categorie }}</span>
-							
-							<div class="overlay">
-								<div class="fh5co-text">
-									<h2>{{ .Params.title }}</h2>
-									<p>{{ .Params.description }}</p>
-								</div>
-							</div>
-						</a>
-						<div id="{{ .Params.content_url }}" class="white-popup-block mfp-hide">
-							{{ .Content   }}
-						</div>
+<a class="popup-modal " href="#{{ .Params.content_url }}" style="background-image:url('{{ .Params.img }}');">
+	<!--<span>{{ .Params.categorie }}</span>-->
+	
+	<div class="overlay">
+		<div class="fh5co-text">
+			<h2>{{ .Params.title }}</h2>
+			<p>{{ .Params.description }}</p>
+		</div>
+	</div>
+</a>
+<div id="{{ .Params.content_url }}" class="white-popup-block mfp-hide">
+	{{with .Params.content}}
+	{{ . | safeHTML }}
+	{{end}}
+</div>
 			
 
