add some more references

--- a/layouts/partials/introsection.html
+++ b/layouts/partials/introsection.html
@@ -8,9 +8,49 @@
 				</div>
 			</div>
 		</div>
+		
 		<div class="row row-bottom-padded-lg intro-items">
 			<div class="col to-animate ">
-				{{ with .Site.GetPage "page" "references/professionell-werben.md" }}
+                {{ with .Site.GetPage "page" "references/ruvido.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+            <div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/b2berne.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+		</div>
+		 					 
+		<div class="row row-bottom-padded-lg intro-items">
+			<div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/award-marketing-architektur.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+            <div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/wuethrich-kies-grafik.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+		</div>
+		
+		<div class="row row-bottom-padded-lg intro-items">
+			<div class="col to-animate ">
+				{{ with .Site.GetPage "page" "references/grafikdesign.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+			</div>
+           	<div class="col-8 to-animate ">
+                {{ with .Site.GetPage "page" "references/o-maeder-einladung.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+		</div>
+		
+		<div class="row row-bottom-padded-lg intro-items">
+            <div class="col to-animate ">
+				{{ with .Site.GetPage "page" "references/workware-contria.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
@@ -19,24 +59,26 @@
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col to-animate ">
-				{{ with .Site.GetPage "page" "references/workware-contria.md" }}
+		</div>
+		
+		<div class="row row-bottom-padded-lg intro-items">
+			<div class="col to-animate ">
+				{{ with .Site.GetPage "page" "references/professionell-werben.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
-		</div>
-		 					 
-		<div class="row row-bottom-padded-lg intro-items">
 			<div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/ruvido.md" }}
+                {{ with .Site.GetPage "page" "references/praxis-fuer-entspannung-postcard.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
+
 			<div class="col to-animate ">
-				{{ with .Site.GetPage "page" "references/grafikdesign.md" }}
+                {{ with .Site.GetPage "page" "references/lebana-workware.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
-			</div>
+            </div>
+
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
@@ -45,33 +87,67 @@
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col to-animate ">
+            <div class="col-7 to-animate ">
                 {{ with .Site.GetPage "page" "references/building-award2.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
 		</div>
-		
-		<div class="row row-bottom-padded-lg intro-items">
-			<div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/workware.md" }}
-                    {{ partial "intro.html" .}}
-                {{ end }}
-            </div>
-            <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/building-award2.md" }}
-                    {{ partial "intro.html" .}}
-                {{ end }}
-            </div>
-            <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "references/building-award2.md" }}
-                    {{ partial "intro.html" .}}
-                {{ end }}
-            </div>
-		</div>
-		
 	
+		<div class="row row-bottom-padded-lg intro-items">
+			<div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/bijoux-stadelmann-inserat.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+            <div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/swiss-sales-einladung.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+			<div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/soziale-innovation-publikation.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+		</div>
 		
+		<div class="row row-bottom-padded-lg intro-items">
+			<div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/stuecheli-architekten-jahrbuch.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+            <div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/wuethrich-kies-grafik.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+		</div>
+		
+		
+		<div class="row row-bottom-padded-lg intro-items">
+			<div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/garage-hofmann-werbeartikel.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+            <div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/usbsticks.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+            <div class="col to-animate ">
+                {{ with .Site.GetPage "page" "references/bijoux-stadelmann-event.md" }}
+                    {{ partial "intro.html" .}}
+                {{ end }}
+            </div>
+		</div>
+
+
+	
+
+
 	
 	</div>
 </section>
