--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,9 +1,6 @@
-
-
-			    	
 <a class="popup-modal " href="#{{ .Params.content_url }}" style="background-image:url('{{ .Params.img }}');">
 	<!--<span>{{ .Params.categorie }}</span>-->
-	
+
 	<div class="overlay">
 		<div class="fh5co-text">
 			<h2>{{ .Params.title }}</h2>
@@ -11,10 +8,16 @@
 		</div>
 	</div>
 </a>
-<div id="{{ .Params.content_url }}" class="white-popup-block mfp-hide">
-	{{with .Params.content}}
-	{{ . | safeHTML }}
-	{{end}}
+<div id="{{ .Params.content_url }}" class="white-popup-block mfp-hide container">
+	<div class="row">
+		<div class="col-12">
+			<img src="{{ .Params.img }}" />
+			<span>
+				<strong>{{ .Params.title }}</strong>
+			</span>
+			<p>
+				{{with .Params.content}} {{ . | safeHTML }} {{end}}
+			</p>
+		</div>
+	</div>
 </div>
-			
-
