add styling and corrections

--- a/layouts/partials/introsection.html
+++ b/layouts/partials/introsection.html
@@ -1,21 +1,21 @@
 <section id="fh5co-intro">
 	<div class="container">
 		<div class="col-md-12 section-heading text-center">
-			<h2 class="to-animate">{{ with .Site.Params.intro.title }}{{ . }}{{ end }}</h2>
+			<h2 class="to-animate-no">{{ with .Site.Params.intro.title }}{{ . }}{{ end }}</h2>
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 subtext to-animate">
+				<div class="col-md-8 col-md-offset-2 subtext to-animate-no">
 					<h3>{{ with .Site.Params.intro.description }}{{ . | markdownify }}{{ end }}</h3>
 				</div>
 			</div>
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
-			<div class="col to-animate ">
+			<div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/ruvido.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col to-animate ">
+            <div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/b2berne.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -23,12 +23,12 @@
 		</div>
 		 					 
 		<div class="row row-bottom-padded-lg intro-items">
-			<div class="col to-animate ">
+			<div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/award-marketing-architektur.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col to-animate ">
+            <div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/wuethrich-kies-grafik.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -36,12 +36,12 @@
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
-			<div class="col to-animate ">
+			<div class="col to-animate-no ">
 				{{ with .Site.GetPage "page" "references/grafikdesign.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
-           	<div class="col-8 to-animate ">
+           	<div class="col-8 to-animate-no ">
                 {{ with .Site.GetPage "page" "references/o-maeder-einladung.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -49,12 +49,12 @@
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
-            <div class="col to-animate ">
+            <div class="col to-animate-no ">
 				{{ with .Site.GetPage "page" "references/workware-contria.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
-            <div class="col to-animate ">
+            <div class="col to-animate-no ">
                  {{ with .Site.GetPage "page" "references/building-award.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -62,18 +62,18 @@
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
-			<div class="col to-animate ">
+			<div class="col to-animate-no ">
 				{{ with .Site.GetPage "page" "references/professionell-werben.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
-			<div class="col to-animate ">
+			<div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/praxis-fuer-entspannung-postcard.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
 
-			<div class="col to-animate ">
+			<div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/lebana-workware.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -82,12 +82,12 @@
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
-			<div class="col to-animate ">
+			<div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/workware.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col-7 to-animate ">
+            <div class="col-7 to-animate-no ">
                 {{ with .Site.GetPage "page" "references/building-award2.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -95,17 +95,17 @@
 		</div>
 	
 		<div class="row row-bottom-padded-lg intro-items">
-			<div class="col to-animate ">
+			<div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/bijoux-stadelmann-inserat.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col to-animate ">
+            <div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/swiss-sales-einladung.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-			<div class="col to-animate ">
+			<div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/soziale-innovation-publikation.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -113,12 +113,12 @@
 		</div>
 		
 		<div class="row row-bottom-padded-lg intro-items">
-			<div class="col to-animate ">
+			<div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/stuecheli-architekten-jahrbuch.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col to-animate ">
+            <div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/wuethrich-kies-grafik.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
@@ -127,17 +127,17 @@
 		
 		
 		<div class="row row-bottom-padded-lg intro-items">
-			<div class="col to-animate ">
+			<div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/garage-hofmann-werbeartikel.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col to-animate ">
+            <div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/usbsticks.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col to-animate ">
+            <div class="col to-animate-no ">
                 {{ with .Site.GetPage "page" "references/bijoux-stadelmann-event.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
