--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -3,21 +3,18 @@
 
 	<div class="overlay">
 		<div class="fh5co-text">
-			<h2>{{ .Params.title }}</h2>
-			<p>{{ .Params.description }}</p>
+			<p>{{ .Params.categorie }}</p>
+			<h3>{{ .Params.title }}</h3>
 		</div>
 	</div>
 </a>
 <div id="{{ .Params.content_url }}" class="white-popup-block mfp-hide container">
 	<div class="row">
-		<div class="col-12">
+		<div class="col-10 ">
 			<img src="{{ .Params.img }}" />
-			<span>
-				<strong>{{ .Params.title }}</strong>
-			</span>
-			<p>
+			<div class="content-block">
 				{{with .Params.content}} {{ . | safeHTML }} {{end}}
-			</p>
+			</div>
 		</div>
 	</div>
 </div>
