--- a/layouts/partials/work.html
+++ b/layouts/partials/work.html
@@ -12,9 +12,9 @@
 			</div>
 			<div class="row row-bottom-padded-sm">
 			{{ range .Site.Params.work.row }}
-				<div class="col-md-4 col-sm-6 col-xxs-12">
-					<a href="images/{{ .img }}" class="fh5co-project-item image-popup to-animate">
-						<img src="images/{{ .img }}" alt="{{ .alt }}" class="img-responsive">
+				<div class="col-6 col-md-6 col-sm-6 col-xxs-12">
+					<a href="{{ .img }}" class="fh5co-project-item image-popup to-animate">
+						<img src="{{ .img }}" alt="{{ .alt }}" class="img-responsive">
 						<div class="fh5co-text">
 						<h2>{{ .title }}</h2>
 						<span>{{ .subtitle }}</span>
